# BackEndMisEventos

./: .gitignore  DatabaseCreatee.txt  Dockerfile  README.md  database.db  docker-compose.yml  pyproject.toml  query_items.py  requirements.txt
app/: config.py  main.py  schemas.py  utils.py
app/api/: routes.py
app/db/: database.py
app/db/migrations/: alembic.ini  env.py
app/db/migrations/versions/: a91608d4e5e0_crear_tabla_user.py  c8e29ada2802_agregar_campo_token_a_user.py
app/models/: models.py
tests/: test_routes.py
