[tool.poetry]
name = "mis_eventos"
version = "0.1.0"
description = "Descripción de tu proyecto"
authors = ["Kevin David Leon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.24"
sqlalchemy = "^2.0.38"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
alembic = "^1.10.0"
pytest = "^7.0.0"
httpx = "^0.23.0"  # Para pruebas de cliente HTTP 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
